# Code-as-Factory

./: README.md  pyproject.toml  run_pipeline.py
agent_prompt/: Stage1_task_industrial_addendum  Stage3_industrial_addendum  Stage7_small_objects_task  Stage8_small_describe_task  Stage9_small_geometry_task  Stage_scene_classifier
agent_utils/: scene_classifier.py  stage10_material.py  stage11_texture.py  stage12_render.py  stage5_describe.py  stage6_geometry.py  stage7_small_objects.py  stage8_small_describe.py  stage9_small_geometry.py
agent_utils/stage1/: run_stage1.py
agent_utils/stage2/: run_stage2.py
agent_utils/stage3/: core.py  run_stage3.py
agent_utils/stage4/: run_stage4.py
example/: pipeline_config.example.json
example/run_20260521_104358_example1/stage12_render/: render_output.py
image_prompt_gen/: industrial_prompts.json  topdown_room_image_generator.py
