[project]
name = "code-as-room"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "openai>=2.41.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
